--- a/trunk/SQLServer/MYSQLServer/MYSQLServer.vcxproj
+++ b/trunk/SQLServer/MYSQLServer/MYSQLServer.vcxproj
@@ -19,7 +19,7 @@
     <ClCompile Include="Classes\HttpEvent.cpp" />
     <ClCompile Include="Classes\HttpLogic.cpp" />
     <ClCompile Include="Classes\main.cpp" />
-    <ClCompile Include="Classes\MD5.cpp" />
+    <ClCompile Include="Classes\MD55.cpp" />
     <ClCompile Include="Classes\netjson\json_reader.cpp" />
     <ClCompile Include="Classes\netjson\json_value.cpp" />
     <ClCompile Include="Classes\netjson\json_writer.cpp" />
@@ -37,7 +37,7 @@
     <ClInclude Include="Classes\HttpEvent.h" />
     <ClInclude Include="Classes\HttpLogic.h" />
     <ClInclude Include="Classes\iconv.h" />
-    <ClInclude Include="Classes\MD5.h" />
+    <ClInclude Include="Classes\MD55.h" />
     <ClInclude Include="Classes\netjson\json_batchallocator.h" />
     <ClInclude Include="Classes\netjson\json_lib.h" />
     <ClInclude Include="Classes\netjson\json_tool.h" />
@@ -53,6 +53,8 @@
     <ClInclude Include="Classes\stdafx.h" />
     <ClInclude Include="Classes\targetver.h" />
     <ClInclude Include="Classes\XXIconv.h" />
+    <ClInclude Include="Classes\zlib\include\zconf.h" />
+    <ClInclude Include="Classes\zlib\include\zlib.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Classes\netjson\json_internalarray.inl" />
@@ -106,7 +108,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;_SCL_SECURE_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>.\Classes;..\protobuf\vsprojects\Debug;.\Classes\proto;D:\Program Files\mysql\include;.\Classes\netjson;.\curl\include;.\Classes\db;.\Classes\cc;..\protobuf;..\protobuf\src;.\Classes\config;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Classes;..\protobuf\vsprojects\Debug;.\Classes\proto;D:\Program Files\mysql\include;.\Classes\netjson;.\curl\include;.\Classes\db;.\Classes\cc;..\protobuf;..\protobuf\src;.\Classes\config;.\Classes\cryptopp;.\Classes\zlib\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
