--- a/LogicServer/LogicServer1/LogicServer.vcxproj
+++ b/LogicServer/LogicServer1/LogicServer.vcxproj
@@ -96,6 +96,7 @@
     <ClCompile Include="Classes\common\Object.cpp" />
     <ClCompile Include="Classes\common\XXIconv.cpp" />
     <ClCompile Include="Classes\http\HttpEvent.cpp" />
+    <ClCompile Include="Classes\http\HttpLogic.cpp" />
     <ClCompile Include="Classes\main.cpp" />
     <ClCompile Include="Classes\netjson\json_reader.cpp" />
     <ClCompile Include="Classes\netjson\json_value.cpp" />
@@ -118,6 +119,7 @@
     <ClInclude Include="Classes\common\Object.h" />
     <ClInclude Include="Classes\common\XXIconv.h" />
     <ClInclude Include="Classes\http\HttpEvent.h" />
+    <ClInclude Include="Classes\http\HttpLogic.h" />
     <ClInclude Include="Classes\netjson\json_batchallocator.h" />
     <ClInclude Include="Classes\netjson\json_lib.h" />
     <ClInclude Include="Classes\netjson\json_tool.h" />
