--- a/trunk/SQLServer/protobuf/vsprojects/libprotobuf.vcxproj
+++ b/trunk/SQLServer/protobuf/vsprojects/libprotobuf.vcxproj
@@ -37,8 +37,8 @@
     <_ProjectFileVersion>12.0.21005.1</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>..\..\Server1\Debug</OutDir>
-    <IntDir>Debug\</IntDir>
+    <OutDir>..\..\Debug</OutDir>
+    <IntDir>..\..\Debug</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>Release\</OutDir>
