--- a/trunk/GateServer/projects/GateServer1/Server1.vcxproj.filters
+++ b/trunk/GateServer/projects/GateServer1/Server1.vcxproj.filters
@@ -102,6 +102,12 @@
     <ClCompile Include="Classes\http\HttpLogic.cpp">
       <Filter>源文件\Classes\http</Filter>
     </ClCompile>
+    <ClCompile Include="Classes\cc\LogicServer.cpp">
+      <Filter>源文件\Classes\cc</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\proto\LogicServerInfo.cpp">
+      <Filter>源文件\Classes\proto</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\stdafx.h">
@@ -202,6 +208,12 @@
     </ClInclude>
     <ClInclude Include="Classes\http\HttpLogic.h">
       <Filter>源文件\Classes\http</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\cc\LogicServer.h">
+      <Filter>源文件\Classes\cc</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\proto\LogicServerInfo.h">
+      <Filter>源文件\Classes\proto</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
