--- a/GateServer/projects/GateServer1/Server1.vcxproj
+++ b/GateServer/projects/GateServer1/Server1.vcxproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <ClCompile Include="Classes\cc\DBProto.cpp" />
     <ClCompile Include="Classes\cc\LogicServer.cpp" />
+    <ClCompile Include="Classes\cc\Login.cpp" />
     <ClCompile Include="Classes\common\Common.cpp" />
     <ClCompile Include="Classes\common\CSVDataHelper.cpp" />
     <ClCompile Include="Classes\common\CSVDataInfo.cpp" />
@@ -112,11 +113,13 @@
     <ClCompile Include="Classes\poco\LibEvent.cpp" />
     <ClCompile Include="Classes\poco\LibPOCO.cpp" />
     <ClCompile Include="Classes\proto\LogicServerInfo.cpp" />
+    <ClCompile Include="Classes\proto\LoginInfo.cpp" />
     <ClCompile Include="Classes\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\cc\DBProto.h" />
     <ClInclude Include="Classes\cc\LogicServer.h" />
+    <ClInclude Include="Classes\cc\Login.h" />
     <ClInclude Include="Classes\common\Common.h" />
     <ClInclude Include="Classes\common\CSVBaseData.h" />
     <ClInclude Include="Classes\common\CSVDataHelper.h" />
@@ -148,6 +151,7 @@
     <ClInclude Include="Classes\poco\LibEvent.h" />
     <ClInclude Include="Classes\poco\LibPOCO.h" />
     <ClInclude Include="Classes\proto\LogicServerInfo.h" />
+    <ClInclude Include="Classes\proto\LoginInfo.h" />
     <ClInclude Include="Classes\stdafx.h" />
     <ClInclude Include="Classes\targetver.h" />
   </ItemGroup>
