--- a/GateServer/projects/GateServer1/Server1.vcxproj
+++ b/GateServer/projects/GateServer1/Server1.vcxproj
@@ -59,7 +59,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;_SCL_SECURE_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>.\Classes;.\Classes\network;.\Classes\cc;.\Classes\common;..\..\protobuf\src;..\..\poco\Foundation\include;..\..\poco\Net\include;..\..\poco\Util\include;.\Classes\proto;..\..\poco\Data\include;..\..\poco\Data\MySQL\include;..\..\poco\Data\SQLite\include;..\..\poco\CppUnit\include\;.\Classes\sql;D:\Program Files\mysql\include;.\Classes\http;.\Classes\netjson;.\Classes\poco;.\Classes\room;.\Classes\control;.\Classes\log;..\..\libevent\include;..\..\libevent\include\event2;..\..\curl\include\win32\curl;..\..\libMessagePack;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Classes;.\Classes\network;.\Classes\cc;.\Classes\common;..\..\protobuf\src;..\..\poco\Foundation\include;..\..\poco\Net\include;..\..\poco\Util\include;.\Classes\proto;..\..\poco\Data\include;..\..\poco\Data\MySQL\include;..\..\poco\Data\SQLite\include;..\..\poco\CppUnit\include\;.\Classes\sql;D:\Program Files\mysql\include;.\Classes\http;.\Classes\netjson;.\Classes\poco;.\Classes\room;.\Classes\control;.\Classes\log;..\..\libevent\include;..\..\libevent\include\event2;..\..\curl\include\win32\curl;..\..\libMessagePack;.\Classes\cryptopp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
