--- a/GateServer/projects/GateServer1/Server1.vcxproj
+++ b/GateServer/projects/GateServer1/Server1.vcxproj
@@ -91,8 +91,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Classes\cc\DBProto.cpp" />
+    <ClCompile Include="Classes\cc\Hall.cpp" />
     <ClCompile Include="Classes\cc\LogicServer.cpp" />
     <ClCompile Include="Classes\cc\Login.cpp" />
+    <ClCompile Include="Classes\cc\Vo.cpp" />
     <ClCompile Include="Classes\common\Common.cpp" />
     <ClCompile Include="Classes\common\CSVDataHelper.cpp" />
     <ClCompile Include="Classes\common\CSVDataInfo.cpp" />
@@ -118,8 +120,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\cc\DBProto.h" />
+    <ClInclude Include="Classes\cc\Hall.h" />
     <ClInclude Include="Classes\cc\LogicServer.h" />
     <ClInclude Include="Classes\cc\Login.h" />
+    <ClInclude Include="Classes\cc\Vo.h" />
     <ClInclude Include="Classes\common\Common.h" />
     <ClInclude Include="Classes\common\CSVBaseData.h" />
     <ClInclude Include="Classes\common\CSVDataHelper.h" />
