--- a/SQLServer/protobuf/vsprojects/libprotoc.vcxproj
+++ b/SQLServer/protobuf/vsprojects/libprotoc.vcxproj
@@ -41,8 +41,8 @@
     <IntDir>../../Debug</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>Release\</OutDir>
-    <IntDir>Release\</IntDir>
+    <OutDir>../../Release</OutDir>
+    <IntDir>../../Release</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
